--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -4,9 +4,9 @@ dependency:
 driver:
   name: docker
 platforms:
-  - name: instance
-    image: docker.io/pycontribs/centos:7
-    pre_build_image: true
+  - name: Archlinux
+    image: archlinux:latest
+    dockerfile: Dockerfile.j2
 provisioner:
   name: ansible
 verifier:
