--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,3 +1,31 @@
 ---
 
 - include: map.yml
+
+- name: install
+  package:
+    name: "{{ krb5.packages }}"
+    state: present
+
+- name: enable and start
+    service:
+        name: "{{ service }}"
+        state: started
+        enabled: yes
+  loop: "{{ krb5.services | dict2items }}"
+  loop_control:
+    loop_var: service
+
+- name: configure
+  template:
+    src: krb5.conf.j2
+    dest: /etc/krb5.conf
+    owner: root
+    group: root
+    mode: 0644
+    # seuser: system_u
+    # serole: object_r
+    # setype: etc_t
+    # selevel: s0*
+  notify:
+    - restart krb5
