--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -7,6 +7,13 @@ platforms:
   - name: Archlinux
     image: archlinux:latest
     dockerfile: Dockerfile.j2
+    command: /lib/systemd/systemd
+    tmpfs:
+      - /run
+      - /tmp
+    volumes:
+      - /sys/fs/cgroup:/sys/fs/cgroup:ro
+    privileged: yes
 provisioner:
   name: ansible
 verifier:
