--- a/vars/default.yml
+++ b/vars/default.yml
@@ -5,3 +5,15 @@ krb5:
   services:
     - krb5-kdc
     - krb5-kadmind
+  config:
+    libdefaults:
+      default_realm: ATHENA.MIT.EDU
+    realms:
+      ATHENA.MIT.EDU:
+        admin_server: kerberos.mit.edu
+      ANDREW.CMU.EDU:
+        admin_server: kdc-01.andrew.cmu.edu
+    domain_realms:
+      mit.edu: ATHENA.MIT.EDU
+      csail.mit.edu: CSAIL.MIT.EDU
+      .ucsc.edu: CATS.UCSC.EDU
