Add option to run krb5 as server

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -15,6 +15,7 @@
   loop: "{{ krb5.services }}"
   loop_control:
     loop_var: service
+  when: krb5.is_server | bool
 
 - name: configure
   template:
