--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -4,29 +4,16 @@
 
 - name: install
   package:
-    name: "{{ krb5.packages }}"
+    name: '{{ krb5.packages }}'
     state: present
 
-- name: enable and start
-  service:
-    name: "{{ service }}"
-    state: started
-    enabled: yes
-  loop: "{{ krb5.services }}"
-  loop_control:
-    loop_var: service
-  when: krb5.is_server | bool
-
-- name: configure
+- name: configure krb5
   template:
     src: krb5.conf.j2
     dest: /etc/krb5.conf
     owner: root
     group: root
     mode: 0644
-    # seuser: system_u
-    # serole: object_r
-    # setype: etc_t
-    # selevel: s0*
-  notify:
-    - restart krb5
+
+- include: server.yml
+  when: krb5.is_server | bool
