--- a/tasks/server.yml
+++ b/tasks/server.yml
@@ -17,13 +17,13 @@
     owner: root
     group: root
     mode: '0644'
-  loop: '{{ krb5.config.kdc.realms | dict2items }}'
+  loop: '{{ krb5.config.kdc.realms | default({}) | dict2items }}'
 
 - include: realm/create.yml
   vars:
     realm: '{{ item }}'
   when: realm.value is defined
-  loop: '{{ krb5.config.kdc.realms | dict2items }}'
+  loop: '{{ krb5.config.kdc.realms | default({}) | dict2items }}'
   notify:
     - restart krb5
 
