--- a/tasks/server.yml
+++ b/tasks/server.yml
@@ -17,6 +17,7 @@
     owner: root
     group: root
     mode: '0644'
+  when: item.value.acl_file is defined
   loop: '{{ krb5.config.kdc.realms | default({}) | dict2items }}'
 
 - include: realm/create.yml
